probe_out.txt
probe_time.zig:3:5: error: found compile log statement
    @compileLog("Has timestamp:", @hasDecl(std.time, "timestamp"));
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    callMain [inlined]: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\start.zig:679:59
    WinStartup: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\start.zig:479:53
    2 reference(s) hidden; use '-freference-trace=4' to see all references

Compile Log Output:
@as(*const [14:0]u8, "Has timestamp:"), @as(bool, false)
@as(*const [19:0]u8, "Has milliTimestamp:"), @as(bool, false)
@as(*const [18:0]u8, "Has nanoTimestamp:"), @as(bool, false)
@as(*const [19:0]u8, "Has microTimestamp:"), @as(bool, false)
